--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-fabric-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Fabric
+                            <i class="fas fa-plus"></i>  Add Another Fabric
                         </button>
                     </div>
                 </div>
@@ -316,7 +316,7 @@
     <div class="form-row add-row">
         <div class="add-btn-container">
             <button type="button" class="add-collar-btn add-btn">
-                <i class="fas fa-plus"></i> + Add Another Collar Size
+                <i class="fas fa-plus"></i>  Add Another Collar Size
             </button>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="form-row add-row">
         <div class="add-btn-container">
             <button type="button" class="add-cuff-btn add-btn">
-                <i class="fas fa-plus"></i> + Add Another Cuff Size
+                <i class="fas fa-plus"></i>  Add Another Cuff Size
             </button>
         </div>
     </div>
@@ -521,7 +521,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-velvet-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Velvet Tape
+                            <i class="fas fa-plus"></i>  Add Another Velvet Tape
                         </button>
                     </div>
                 </div>
@@ -580,7 +580,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-washcare-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Wash Care Label
+                            <i class="fas fa-plus"></i>  Add Another Wash Care Label
                         </button>
                     </div>
                 </div>
@@ -647,7 +647,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-woven-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Woven Label
+                            <i class="fas fa-plus"></i>  Add Another Woven Label
                         </button>
                     </div>
                 </div>
