--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
                         </div>
                         <div class="form-group">
                             <label for="fabricAmount">Consumption:</label>
-                            <input
-    type="number"
-    step="any"
-    id="fabricAmount"
-    name="fabricAmount"
-    class="fabricAmount"
-    placeholder="Consumption (e.g. 0.295)"
->
+                            <input type="number" step="any" id="fabricAmount" name="fabricAmount"  class="fabricAmount" placeholder="Consumption (e.g. 0.295)">
 
                         </div>
                         <div class="form-group">
@@ -140,7 +133,7 @@
     id="collarYarnAmount"
     name="collarYarnAmount"
     class="collarYarnAmount"
-    placeholder="Collar yarn consumption (e.g. 0.048)"
+    placeholder="Collar yarn consumption"
 >
 
                     </div>
@@ -197,7 +190,7 @@
     id="tippingYarnAmount"
     name="tippingYarnAmount"
     class="tippingYarnAmount"
-    placeholder="Tipping yarn consumption (e.g. 0.005)"
+    placeholder="Tipping yarn consumption"
 >
 
                     </div>
@@ -462,7 +455,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-button-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Button Item
+                            <i class="fas fa-plus"></i>  Add Another Button Item
                         </button>
                     </div>
                 </div>
