--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
                         </div>
                         <div class="form-group">
                             <label for="fabricAmount">Consumption:</label>
-                            <input
-    type="number"
-    step="any"
-    id="fabricAmount"
-    name="fabricAmount"
-    class="fabricAmount"
-    placeholder="Consumption (e.g. 0.295)"
->
+                            <input type="number" step="any" id="fabricAmount" name="fabricAmount"  class="fabricAmount" placeholder="Consumption (e.g. 0.295)">
 
                         </div>
                         <div class="form-group">
@@ -118,7 +111,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-fabric-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Fabric
+                            <i class="fas fa-plus"></i>  Add Another Fabric
                         </button>
                     </div>
                 </div>
@@ -140,7 +133,7 @@
     id="collarYarnAmount"
     name="collarYarnAmount"
     class="collarYarnAmount"
-    placeholder="Collar yarn consumption (e.g. 0.048)"
+    placeholder="Collar yarn consumption"
 >
 
                     </div>
@@ -197,7 +190,7 @@
     id="tippingYarnAmount"
     name="tippingYarnAmount"
     class="tippingYarnAmount"
-    placeholder="Tipping yarn consumption (e.g. 0.005)"
+    placeholder="Tipping yarn consumption"
 >
 
                     </div>
@@ -316,7 +309,7 @@
     <div class="form-row add-row">
         <div class="add-btn-container">
             <button type="button" class="add-collar-btn add-btn">
-                <i class="fas fa-plus"></i> + Add Another Collar Size
+                <i class="fas fa-plus"></i>  Add Another Collar Size
             </button>
         </div>
     </div>
@@ -402,7 +395,7 @@
     <div class="form-row add-row">
         <div class="add-btn-container">
             <button type="button" class="add-cuff-btn add-btn">
-                <i class="fas fa-plus"></i> + Add Another Cuff Size
+                <i class="fas fa-plus"></i>  Add Another Cuff Size
             </button>
         </div>
     </div>
@@ -462,7 +455,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-button-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Button Item
+                            <i class="fas fa-plus"></i>  Add Another Button Item
                         </button>
                     </div>
                 </div>
@@ -521,7 +514,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-velvet-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Velvet Tape
+                            <i class="fas fa-plus"></i>  Add Another Velvet Tape
                         </button>
                     </div>
                 </div>
@@ -580,7 +573,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-washcare-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Wash Care Label
+                            <i class="fas fa-plus"></i>  Add Another Wash Care Label
                         </button>
                     </div>
                 </div>
@@ -647,7 +640,7 @@
                 <div class="form-row add-row">
                     <div class="add-btn-container">
                         <button type="button" class="add-woven-btn add-btn">
-                            <i class="fas fa-plus"></i> + Add Another Woven Label
+                            <i class="fas fa-plus"></i>  Add Another Woven Label
                         </button>
                     </div>
                 </div>
